--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -14,8 +15,9 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-basic-auth": "^1.0.1",
-    "mongodb": "^2.2.26",
+    "mongodb": "^6.5.0",
     "morgan": "~1.7.0",
+    "nodemon": "^3.1.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.7.3"
   }
